--- a/style.css
+++ b/style.css
@@ -161,13 +161,12 @@ select {
   justify-content: center;
   cursor: pointer;
   transition: 0.2s;
-
 }
 
 .card:hover {
-  -webkit-box-shadow: 0px 0px 34px 19px rgba(234,234,234,1);
-  -moz-box-shadow: 0px 0px 34px 19px rgba(234,234,234,1);
-  box-shadow: 0px 0px 34px 19px rgba(234,234,234,1);
+  -webkit-box-shadow: 0px 0px 34px 19px rgba(234, 234, 234, 1);
+  -moz-box-shadow: 0px 0px 34px 19px rgba(234, 234, 234, 1);
+  box-shadow: 0px 0px 34px 19px rgba(234, 234, 234, 1);
   transition: 0.2s;
 }
 
